// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Particle components SingleParticle render 1`] = `
<AnimatedComponent
  style={
    Object {
      "backgroundColor": "#f0f",
      "borderRadius": 2,
      "height": 4,
      "left": NaN,
      "opacity": 0.8944473559714681,
      "position": "absolute",
      "top": NaN,
      "width": 4,
    }
  }
/>
`;

exports[`Particle components SingleParticle render 2`] = `
<AnimatedComponent
  style={
    Object {
      "backgroundColor": Array [
        "#f0f",
        "#00f",
        "#fff",
        "#ff0",
      ],
      "borderRadius": 6,
      "height": 12,
      "left": NaN,
      "opacity": 0.9653612641557886,
      "position": "absolute",
      "top": NaN,
      "width": 12,
    }
  }
/>
`;

exports[`Particle components basic render 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#000",
        "overflow": "hidden",
      },
      undefined,
      Object {
        "height": 300,
        "width": 750,
      },
    ]
  }
>
  <SingleParticle
    active={true}
    color="#00f"
    dotRadius={
      Array [
        2,
        4,
        6,
        8,
      ]
    }
    duration={3000}
    height={300}
    key="0"
    radius={50}
    type="absorb"
    width={750}
  />
  <SingleParticle
    active={true}
    color="#f0f"
    dotRadius={
      Array [
        2,
        4,
        6,
        8,
      ]
    }
    duration={3000}
    height={300}
    key="1"
    radius={50}
    type="absorb"
    width={750}
  />
  <SingleParticle
    active={true}
    color="#f0f"
    dotRadius={
      Array [
        2,
        4,
        6,
        8,
      ]
    }
    duration={3000}
    height={300}
    key="2"
    radius={50}
    type="absorb"
    width={750}
  />
  <SingleParticle
    active={true}
    color="#ff0"
    dotRadius={
      Array [
        2,
        4,
        6,
        8,
      ]
    }
    duration={3000}
    height={300}
    key="3"
    radius={50}
    type="absorb"
    width={750}
  />
  <SingleParticle
    active={true}
    color="#f0f"
    dotRadius={
      Array [
        2,
        4,
        6,
        8,
      ]
    }
    duration={3000}
    height={300}
    key="4"
    radius={50}
    type="absorb"
    width={750}
  />
  <SingleParticle
    active={true}
    color="#f0f"
    dotRadius={
      Array [
        2,
        4,
        6,
        8,
      ]
    }
    duration={3000}
    height={300}
    key="5"
    radius={50}
    type="absorb"
    width={750}
  />
  <SingleParticle
    active={true}
    color="#f0f"
    dotRadius={
      Array [
        2,
        4,
        6,
        8,
      ]
    }
    duration={3000}
    height={300}
    key="6"
    radius={50}
    type="absorb"
    width={750}
  />
  <SingleParticle
    active={true}
    color="#fff"
    dotRadius={
      Array [
        2,
        4,
        6,
        8,
      ]
    }
    duration={3000}
    height={300}
    key="7"
    radius={50}
    type="absorb"
    width={750}
  />
  <SingleParticle
    active={true}
    color="#00f"
    dotRadius={
      Array [
        2,
        4,
        6,
        8,
      ]
    }
    duration={3000}
    height={300}
    key="8"
    radius={50}
    type="absorb"
    width={750}
  />
  <SingleParticle
    active={true}
    color="#ff0"
    dotRadius={
      Array [
        2,
        4,
        6,
        8,
      ]
    }
    duration={3000}
    height={300}
    key="9"
    radius={50}
    type="absorb"
    width={750}
  />
  <SingleParticle
    active={true}
    color="#f0f"
    dotRadius={
      Array [
        2,
        4,
        6,
        8,
      ]
    }
    duration={3000}
    height={300}
    key="10"
    radius={50}
    type="absorb"
    width={750}
  />
  <SingleParticle
    active={true}
    color="#fff"
    dotRadius={
      Array [
        2,
        4,
        6,
        8,
      ]
    }
    duration={3000}
    height={300}
    key="11"
    radius={50}
    type="absorb"
    width={750}
  />
  <SingleParticle
    active={true}
    color="#00f"
    dotRadius={
      Array [
        2,
        4,
        6,
        8,
      ]
    }
    duration={3000}
    height={300}
    key="12"
    radius={50}
    type="absorb"
    width={750}
  />
  <SingleParticle
    active={true}
    color="#ff0"
    dotRadius={
      Array [
        2,
        4,
        6,
        8,
      ]
    }
    duration={3000}
    height={300}
    key="13"
    radius={50}
    type="absorb"
    width={750}
  />
  <SingleParticle
    active={true}
    color="#00f"
    dotRadius={
      Array [
        2,
        4,
        6,
        8,
      ]
    }
    duration={3000}
    height={300}
    key="14"
    radius={50}
    type="absorb"
    width={750}
  />
  <SingleParticle
    active={true}
    color="#00f"
    dotRadius={
      Array [
        2,
        4,
        6,
        8,
      ]
    }
    duration={3000}
    height={300}
    key="15"
    radius={50}
    type="absorb"
    width={750}
  />
  <SingleParticle
    active={true}
    color="#f0f"
    dotRadius={
      Array [
        2,
        4,
        6,
        8,
      ]
    }
    duration={3000}
    height={300}
    key="16"
    radius={50}
    type="absorb"
    width={750}
  />
  <SingleParticle
    active={true}
    color="#00f"
    dotRadius={
      Array [
        2,
        4,
        6,
        8,
      ]
    }
    duration={3000}
    height={300}
    key="17"
    radius={50}
    type="absorb"
    width={750}
  />
  <SingleParticle
    active={true}
    color="#f0f"
    dotRadius={
      Array [
        2,
        4,
        6,
        8,
      ]
    }
    duration={3000}
    height={300}
    key="18"
    radius={50}
    type="absorb"
    width={750}
  />
  <SingleParticle
    active={true}
    color="#ff0"
    dotRadius={
      Array [
        2,
        4,
        6,
        8,
      ]
    }
    duration={3000}
    height={300}
    key="19"
    radius={50}
    type="absorb"
    width={750}
  />
  <SingleParticle
    active={true}
    color="#f0f"
    dotRadius={
      Array [
        2,
        4,
        6,
        8,
      ]
    }
    duration={3000}
    height={300}
    key="20"
    radius={50}
    type="absorb"
    width={750}
  />
  <SingleParticle
    active={true}
    color="#fff"
    dotRadius={
      Array [
        2,
        4,
        6,
        8,
      ]
    }
    duration={3000}
    height={300}
    key="21"
    radius={50}
    type="absorb"
    width={750}
  />
  <SingleParticle
    active={true}
    color="#00f"
    dotRadius={
      Array [
        2,
        4,
        6,
        8,
      ]
    }
    duration={3000}
    height={300}
    key="22"
    radius={50}
    type="absorb"
    width={750}
  />
  <SingleParticle
    active={true}
    color="#00f"
    dotRadius={
      Array [
        2,
        4,
        6,
        8,
      ]
    }
    duration={3000}
    height={300}
    key="23"
    radius={50}
    type="absorb"
    width={750}
  />
  <SingleParticle
    active={true}
    color="#ff0"
    dotRadius={
      Array [
        2,
        4,
        6,
        8,
      ]
    }
    duration={3000}
    height={300}
    key="24"
    radius={50}
    type="absorb"
    width={750}
  />
  <SingleParticle
    active={true}
    color="#f0f"
    dotRadius={
      Array [
        2,
        4,
        6,
        8,
      ]
    }
    duration={3000}
    height={300}
    key="25"
    radius={50}
    type="absorb"
    width={750}
  />
  <SingleParticle
    active={true}
    color="#fff"
    dotRadius={
      Array [
        2,
        4,
        6,
        8,
      ]
    }
    duration={3000}
    height={300}
    key="26"
    radius={50}
    type="absorb"
    width={750}
  />
  <SingleParticle
    active={true}
    color="#f0f"
    dotRadius={
      Array [
        2,
        4,
        6,
        8,
      ]
    }
    duration={3000}
    height={300}
    key="27"
    radius={50}
    type="absorb"
    width={750}
  />
  <SingleParticle
    active={true}
    color="#00f"
    dotRadius={
      Array [
        2,
        4,
        6,
        8,
      ]
    }
    duration={3000}
    height={300}
    key="28"
    radius={50}
    type="absorb"
    width={750}
  />
  <SingleParticle
    active={true}
    color="#f0f"
    dotRadius={
      Array [
        2,
        4,
        6,
        8,
      ]
    }
    duration={3000}
    height={300}
    key="29"
    radius={50}
    type="absorb"
    width={750}
  />
</View>
`;
